CAMEL-18827: camel-kudu - Fix unit test failure with JDK 17 (#8920)